--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^1.0.0-beta.1",
     "@material-ui/core": "1.4.1",
     "@material-ui/icons": "2.0.0",
     "@types/googlemaps": "3.30.11",
     "@types/markerclustererplus": "2.1.33",
     "ajv": "6.5.2",
+    "axios": "^0.18.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
+    "postcss-loader": "^2.1.6",
+    "raw-loader": "^0.5.1",
     "react": "16.4.1",
     "react-chartist": "0.13.1",
     "react-dom": "16.4.1",
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "react-swipeable-views": "0.12.15"
+    "react-swipeable-views": "0.12.15",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
